--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=8080
 dynamo.serviceEndpoint=${SERVICE_ENDPOINT}
 dynamo.signingRegion=${SIGNING_REGION}
 dynamo.accessKey=${ACCESS_KEY}
