--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,10 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_TOKEN
     - name: docker build
-      run: docker build . --file Dockerfile --tag ${{secrets.DOCKER_USER}}/dynamodb-api:$(date +%s)
+      env:
+        DOCKER_USER: ${{secrets.DOCKER_USER}}
+      run: docker build . --file Dockerfile --tag $DOCKER_USER/dynamodb-api:$(date +%s)
     - name: docker push
-      run: docker push ${{secrets.DOCKER_USER}}/dynamodb-api
+      env:
+        DOCKER_USER: ${{secrets.DOCKER_USER}}
+      run: docker push $DOCKER_USER/dynamodb-api
