--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,10 +24,6 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_TOKEN
     - name: docker build
-      env:
-        DOCKER_USER: ${{secrets.DOCKER_USER}}
-      run: docker build . --file Dockerfile --tag $DOCKER_USER/dynamodb-api:$(date +%s)
+      run: docker build . --file Dockerfile --tag gustosilva/dynamodb-api:$(date +%s)
     - name: docker push
-      env:
-        DOCKER_USER: ${{secrets.DOCKER_USER}}
-      run: docker push $DOCKER_USER/dynamodb-api
+      run: docker push gustosilva/dynamodb-api
