docker build and push

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,3 +22,9 @@ jobs:
       with:  
         username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_TOKEN }}
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v3.3.0
+      with:
+        push: true
+        tags: gustosilva/dynamodb-api
+
