--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,23 +8,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn clean package -DskipTests --file pom.xml    
-    - name: Docker Login
-      uses: docker/login-action@v2.1.0
-      with:  
-        username: ${{ secrets.DOCKER_USER }}
-        password: ${{ secrets.DOCKER_TOKEN }}
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v3.3.0
-      with:
-        push: true
-        tags: gustosilva/dynamodb-api
+      - uses: actions/checkout@v3
+      - name: Definir JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      - name: Gerar .jar
+        run: mvn -B clean package -DskipTests --file pom.xml
+      - name: docker build
+        run: docker build -t gustosilva/dynamodb-api .
 
+
+#      - name: docker login
+#        env:
+#          DOCKER_USER: ${{secrets.DOCKER_USER}}
+#          DOCKER_TOKEN: ${{secrets.DOCKER_TOKEN}}
+#        run: docker login -u $DOCKER_USER -p $DOCKER_TOKEN
+#      - name: docker build
+#        run: docker build --file Dockerfile --tag gustosilva/dynamodb-api:$(date +%s) .
+#      - name: docker push
+#        run: docker push gustosilva/dynamodb-api
