action: docker tag

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,8 @@ jobs:
           DOCKER_USER: ${{secrets.DOCKER_USER}}
           DOCKER_TOKEN: ${{secrets.DOCKER_TOKEN}}
         run: docker login -u $DOCKER_USER -p $DOCKER_TOKEN
+      - name: docker tag
+        run: docker tag $(docker images --filter=reference='gustosilva/dynamodb-api' --format "{{.ID}}") gustosilva/dynamodb-api
 
 #      - name: docker build
 #        run: docker build --file Dockerfile --tag gustosilva/dynamodb-api:$(date +%s) .
